# cuttlefish-private

./: .gitignore  CMakeLists.txt  README.md
include/: Application.hpp  Atlas.hpp  Build_Params.hpp  CdBG.hpp  Character_Buffer.hpp  Color_Coordinate.hpp  Color_Encoding.hpp  Color_Repo.hpp  Color_Table.hpp  Concurrent_Hash_Table.hpp  Contracted_Graph_Expander.hpp  DNA.hpp  DNA_Utility.hpp  Data_Logistics.hpp  Directed_Vertex.hpp  Discontinuity_Edge.hpp  Discontinuity_Graph.hpp  Discontinuity_Graph_Bootstrap.hpp  Discontinuity_Graph_Contractor.hpp  Edge_Matrix.hpp  Ext_Mem_Bucket.hpp  FASTA_Record.hpp  File_Extensions.hpp  Fixed_Cap_Deque.hpp  Graph_Partitioner.hpp  HyperLogLog.hpp  Index_Validator.hpp  Input_Defaults.hpp  Kmer.hpp  Kmer_Hash_Table.hpp  Kmer_Hasher.hpp  Kmer_Hashtable.hpp  Kmer_Index.hpp  Kmer_Index_Utility.hpp  Kmer_SPSC_Iterator.hpp  Kmer_Utility.hpp  Maximal_Unitig_Scratch.hpp  Min_Heap.hpp  Minimizer_Instance.hpp  Minimizer_Instance_Iterator.hpp  (+31 more)
include/BBHash/: BooPHF.h
include/RabbitFX/: License
include/RabbitFX/io/: Buffer.h  Common.h  DataQueue.h  FastxStream.cpp  FastxStream.h  FileReader.cpp  FileReader.h  Formater.cpp  utils.h  verbos_Formater.cpp
include/color_sets/: hybrid.hpp
include/compact_vector/: compact_iterator.hpp  compact_vector.hpp
include/elias_fano/: bit_vector.hpp  compact_vector.hpp  darray.hpp  essentials.hpp  sequence.hpp  util.hpp
include/emhash/: hash_table7.hpp
include/key-value-collator/: Key_Value_Collator.hpp  Key_Value_Iterator.hpp
include/kmc-super-kmers-iterator/: Makefile  README.md  bin_api.h  bin_reader.h  defs.h  example.cpp  iterate_super_kmers.h  iterate_super_kmers.vcxproj  iterate_super_kmers.vcxproj.filters  kmer.h  super_kmer_loader.h  super_kmers_packs_maker.h  super_kmers_serialization_helper.h
include/kmc-super-kmers-iterator/libs/refresh/bitmemory/: bitmemory.h
include/kmc-super-kmers-iterator/libs/refresh/compression/: lz4_wrapper.h  zstd_wrapper.h
include/kmc-super-kmers-iterator/libs/refresh/memory_chunk/: memory_chunk.h
include/kmc-super-kmers-iterator/libs/refresh/parallel_queues/: parallel-queues.h
include/kmc-super-kmers-iterator/libs/refresh/serialization/: serialization.h
include/kmc_api/: kmc_file.h
include/parlayhash/parlay_hash/: bigatomic.h
include/parlayhash/utils/: epoch.h
include/parlayhash/utils/threads/: thread_specific.h
include/spdlog/details/: log_msg.h
src/: Application.cpp  Atlas.cpp  Build_Params.cpp  CMakeLists.txt  CdBG.cpp  CdBG_GFA_Reduced_Writer.cpp  CdBG_GFA_Writer.cpp  CdBG_Plain_Writer.cpp  Color_Repo.cpp  Color_Table.cpp  Contracted_Graph_Expander.cpp  DNA_Utility.cpp  Data_Logistics.cpp  Discontinuity_Edge.cpp  Discontinuity_Graph.cpp  Discontinuity_Graph_Bootstrap.cpp  Discontinuity_Graph_Contractor.cpp  Edge_Matrix.cpp  Graph_Partitioner.cpp  HyperLogLog.cpp  Kmer_Hash_Table.cpp  Kmer_Index.cpp  Kmer_Index_Utility.cpp  Kmer_SPSC_Iterator.cpp  Minimizer_Instance_Iterator.cpp  Multiway_Merger.cpp  Parser.cpp  Read_CdBG.cpp  Read_CdBG_Extractor.cpp  State_Config.cpp  Subgraph.cpp  Subgraphs_Manager.cpp  Subgraphs_Processor.cpp  Super_Kmer_Bucket.cpp  Super_Kmer_Chunk.cpp  Super_Kmer_Splitter.cpp  Unitig_Collator.cpp  Unitig_Coord_Bucket.cpp  Unitig_File.cpp  Unitig_Scratch.cpp  (+7 more)
